--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,11 @@
 pipeline {
     agent any
 
-    tools {
-        jdk 'jdk17'           // Ensure you have JDK 17 configured in Jenkins
-        maven 'Maven3'        // Ensure Maven is configured in Jenkins tools
-    }
+   tools {
+    jdk 'java17'
+    maven 'maven3'
+}
+
 
     stages {
         stage('Checkout') {
