--- a/jenkinsfile
+++ b/jenkinsfile
@@ -179,6 +179,12 @@ pipeline {
             }
         }
 
+        stage('Install wm-unit-test-generator') {
+  steps {
+    sh 'npm install -g wm-unit-test-generator'
+  }
+}
+
         stage('Link wm-unit-test-generator') {
             steps {
                 script {
