--- a/jenkinsfile
+++ b/jenkinsfile
@@ -205,7 +205,7 @@ pipeline {
         dir("${env.TEST_PATH}") {
             sh '''
             echo "🧪 Running unit tests via wm-ut-gen..."
-            npm install --save-dev jest-junit 
+            npm install --registry=https://registry.npmjs.org/ --save-dev jest-junit
             wm-ut-gen run-tests --path=${TEST_PATH} || true
 
             echo "✅ Checking for test report and coverage..."
